# msg801

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  HANDOFF.md  Makefile  README.md
.github/workflows/: release.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: cxx_project.cmake  msg801-config.cmake.in
docs/: README.md  abc_protocol.md  architecture.md  logging.md  testing.md  usage.md
lib/: CMakeLists.txt
lib/include/msg801/: byte_types.hpp  export.hpp  lib.hpp  relay.hpp  tunnel.hpp  udp_sender.hpp  udp_server.hpp
lib/include/msg801/tunnel/: cfb.hpp  identity.hpp  padding.hpp  processor.hpp  processor_chain.hpp  xor.hpp
lib/src/: cfb.cpp  identity.cpp  lib.cpp  padding.cpp  processor_chain.cpp  relay.cpp  tunnel.cpp  udp_sender.cpp  udp_server.cpp
scripts/: bench_socks5.sh  test_relay.sh  test_tunnel.sh
